--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  google_fonts:
+  image_picker: ^0.8.4+10
+  supabase_flutter:
+  google_fonts: 2.2.0
+  shared_preferences:
+  form_validator: ^1.0.1
 
 dev_dependencies:
   flutter_test:
@@ -46,6 +50,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^1.0.0
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
