--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   google_fonts: 2.2.0
   shared_preferences:
   form_validator: ^1.0.1
+  pie_chart: ^5.3.0
 
 dev_dependencies:
   flutter_test:
